--- a/website/front_view/package.json
+++ b/website/front_view/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.2",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.24",
+    "vue-awesome-paginate": "^1.2.0",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
