--- a/website/front_view/package.json
+++ b/website/front_view/package.json
@@ -14,6 +14,7 @@
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.24",
     "vue-awesome-paginate": "^1.2.0",
+    "vue-cookies": "^1.8.6",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
